--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
-name: 'Influxdb in GitHub Actions'
-description: 'Start a Influxdb as Docker container'
+name: 'grafana in GitHub Actions'
+description: 'Start a grafana as Docker container'
 
 branding:
   icon: 'message-square'
@@ -7,7 +7,7 @@ branding:
 
 inputs:
   version:
-    description: 'Influxdb version to use'
+    description: 'grafana version to use'
     required: false
     default: 'latest'
   ports:
@@ -17,27 +17,43 @@ inputs:
   container-name:
     description: 'The name of the spawned Docker container (can be used as hostname when accessed from other containers)'
     required: false
-    default: 'influxdb'
-  influxdb_org:
-    description: 'The initial Organization of the InfluxDB instance.'
+    default: 'grafana'
+  gf_security_admin_user: 
+    description: security_admin_user
     required: false
-    default: 'org'
-  influxdb_user:
-    description: 'The initial User of the InfluxDB instance.'
+    default: admin
+  gf_security_admin_password: 
+    description: security_admin_password
     required: false
-    default: 'admin'
-  influxdb_password:
-    description: 'The initial Password of the InfluxDB instance.'
+    default: password
+  gf_auth_anonymous_enabled: 
+    description: auth_anonymous_enabled
     required: false
-    default: 'password'
-  influxdb_bucket:
-    description: 'The initial Bucket of the InfluxDB instance.'
+    default: "false"
+  gf_auth_basic_enabled: 
+    description: auth_basic_enabled
     required: false
-    default: 'bucket'
-  influxdb_token:
-    description: 'The initial Token of the InfluxDB instance.'
+    default: "true"
+  gf_auth_generic_oauth_enabled: 
+    description: auth_generic_oauth_enabled
     required: false
-    default: 'XXXXXX'
+    default: "false"
+  gf_auth_proxy_enabled: 
+    description: auth_proxy_enabled
+    required: false
+    default: "false"
+  gf_auth_ldap_enabled: 
+    description: auth_ldap_enabled
+    required: false
+    default: "false"
+  gf_auth_grafana_enabled: 
+    description: auth_grafana_enabled
+    required: false
+    default: "true"
+  gf_auth_grafana_api_key: 
+    description: auth_grafana_api_key
+    required: false
+    default: u4OwnMQmaqcHhwjjhQdtqUSl9OQ8+wE7pQmMq2h3NQn6LBgxPtY8lA1nNHncUepF
 
 runs:
   using: 'docker'
@@ -46,8 +62,12 @@ runs:
     - ${{ inputs.version }}
     - ${{ inputs.ports }}
     - ${{ inputs.container-name }}
-    - ${{ inputs.influxdb_org }}
-    - ${{ inputs.influxdb_user }}
-    - ${{ inputs.influxdb_password }}
-    - ${{ inputs.influxdb_bucket }}
-    - ${{ inputs.influxdb_token }}
+    - ${{ inputs.gf_security_admin_user }}
+    - ${{ inputs.gf_security_admin_password }}
+    - ${{ inputs.gf_auth_anonymous_enabled }}
+    - ${{ inputs.gf_auth_basic_enabled }}
+    - ${{ inputs.gf_auth_generic_oauth_enabled }}
+    - ${{ inputs.gf_auth_proxy_enabled }}
+    - ${{ inputs.gf_auth_ldap_enabled }}
+    - ${{ inputs.gf_auth_grafana_enabled }}
+    - ${{ inputs.gf_auth_grafana_api_key }}
